# IDH-Project

./: .gitignore  README.md  config.py  countries_mapper.py  country_name_solver.py  db.py  docker-compose.yml  main.py  pyproject.toml
etl/: calculate_total_score.py  consistency_check.py  load_all_trade_dimension.py  load_country_dimension.py  load_economic_dimension.py  load_education_dimension.py  load_military_dimension.py  load_population_dimension.py  load_tech_dimension.py
etl/data/: .~lock.2016-tables-country.xlsx#  .~lock.2017-tables-country.xlsx#  .~lock.SIPRI-Milex-data-1949-2023.xlsx#  .~lock.pisa_scores.xlsx#  2016-tables-country.xlsx  2017-tables-country.xlsx  2018-tables-country.xlsx  2019-tables-country.xlsx  2020-tables-country.xlsx  2021-tables-country.xlsx  2022-tables-country.xlsx  2023-tables-country.xlsx  SIPRI-Milex-data-1949-2023.xlsx  countries.json  economic_data.xls  economic_data.xlsx  export_trade_data.xlsx  import_trade_data.xlsx  pisa_scores.xlsx  rnd_spending.xlsx
models/: competitiveness_dimension.py  country_dimension.py  country_statistics.py  economic_dimension.py  education_dimension.py  military_dimension.py  population_dimension.py  tech_dimension.py  time_dimension.py  trade_dimension.py
