[tool.poetry]
name = "counttries-rating"
version = "0.1.0"
description = "The concept is to calculate Countries Rating inspired by ideas from Ray Dalio's book 'The Changing World Order'."
authors = ["Oleksii Kutsenko <kutsenko.new@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.3"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
